# YTSEO_PressStart

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/agents/: seo-generator.md
scripts/: screenshot.py
src/ytseo/: mcp_server.py
src/ytseo/core/: config.py  models.py  pipeline.py
src/ytseo/tools/: extract_audio.py  generate_seo.py  platform_rules.py  transcribe.py
src/ytseo/web/: app.py  claude_cli.py  models.py  oauth.py  routes.py
src/ytseo/web/static/: index.html  login.html
