[project]
name = "ytseo"
version = "0.1.0"
description = "Video audio analysis for SEO-friendly titles and hashtags"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "httpx>=0.27",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.100",
]

[project.scripts]
ytseo-web = "ytseo.web.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ytseo"]
